--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,33 @@
         android:theme="@style/Theme.JusticeChain"
         tools:targetApi="31">
         <activity
+            android:name=".firebase.RemainderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".notificationPushActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateNewCaseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ClerkDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LawyerUploadActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OTPActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityLogin"
+            android:exported="false" />
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
